# OmniOpt2

./: ._omniopt_plot_scatter_3d.py  .dockerignore  .general.sh  .gitignore  .helpers.py  .main.py  .omniopt.py  .omniopt_plot.py  .omniopt_plot_3d.py  .omniopt_plot_general.py  .omniopt_plot_get_next_trials.py  .omniopt_plot_gpu_usage.py  .omniopt_plot_kde.py  .omniopt_plot_scatter.py  .omniopt_plot_scatter_generation_method.py  .omniopt_plot_scatter_hex.py  .omniopt_plot_time_and_exit_code.py  .omniopt_plot_trial_index_result.py  .omniopt_plot_worker.py  .plot.py  .shellscript_functions  Dockerfile  README.md  docker-compose.yml  evaluate-run  main  omniopt  omniopt_docker  omniopt_evaluate  omniopt_plot  omniopt_share  plot  pyproject.toml  requirements.txt  setup.py
.gui/: _functions.php  _header_base.php  exit_code_table.php  footer.js  gui.php  index.php  install_omniax.sh  prism.css  prism.js  search.js  search.php  searchable_php_files.php  share.php  share_graphs.js  tutorial.css  tutorials.php  usage_stats.php
.tests/: current_runs_plot_test  folder_structure  help_page  main  main_tests  optimization_example  optimization_example_all_float  optimization_example_full_search  php_files  plot_documentation_has_all_plot_types  plots  start_simple_optimization_run  start_simple_optimization_run_one_param  start_simple_optimization_run_two_params  state_files  test_wronggoing_stuff  train_example_network  wronggoing_stuff
.tools/: .omniopt_plot_scatter_contour.py  create_parallel_plot.py  find_versions.sh  parallel_plot.sh  phases_overview  plot_gif_from_history
(+1169 files in other folders)
