[project]
name = "omniopt2"
description = "Automatic hyperparameter optimizer based on Ax/Botorch"
authors = [
  {email = "norman.koch@tu-dresden.de"},
  {name = "Norman Koch"}
]
version = "2024.03.05-2"
dynamic = ["dependencies"]
[tool.setuptools]
py-modules = []
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
